--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habib's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Qahiri&family=Teko:wght@300;400&family=Zen+Tokyo+Zoo&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="color1">Habib's</span> World!</h1>
+            <h3>Web developer and creator</h3>
+            <p>Web development is the work involved in developing a Web site for the Internet (World Wide Web) or an
+                intranet (a private network).[1] Web development can range from developing a simple single static page
+                of
+                plain text to complex web applications, electronic businesses, and social network services. A more
+                comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web
+                design, Web content development, client liaison, client-side/server-side scripting, Web server and
+                network
+                security configuration, and e-commerce development.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/habibur-rahman-habib-11990a216/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/habibbg.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
