--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
             <img src="images/habibbg.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/bg1.png" alt="">
+        </div>
+        <div class="half-width">
+            <H1>Dream Big</H1>
+            <h2>Become a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS.I cab build any simple website.I can even teach my friends how
+                to make a simple website.My goal is to build different type of websites.Work hard dream big</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RASUME</a>
+        </div>
+
+    </section>
 
 </body>
 
