--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="color1">Habib's</span> World!</h1>
@@ -35,7 +35,7 @@
             <img src="images/habibbg.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/bg1.png" alt="">
         </div>
@@ -48,6 +48,32 @@
         </div>
 
     </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stak-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="color1">2024-Present Pro level Developer </h3>
+                <p>I am the master of HTML,CSS and Javascript.I know everything needed to make a website
+                    function,efficient.i didn't stop with web.I went beyond with most popular javascript framework
+                    called
+                    vue JSEven i know the deployment,server and security.I will give you 100% web solution.</p>
+            </div>
+            <div id="web-developer" class="experience-item">
+                <h2>bigenner Web Developer</h2>
+                <h3 class="color1">2022-2024 Coding Master</h3>
+                <p>We are here to assist you with all your virtual base arrangements, at simply a tick. Getting you
+                    carefully assembled innovation arrangements with a spot of dynamic and customized contact.
+                    InnovationM is a developing and natural plan organization, in fact and inventively gifted to make an
+                    interpretation of your image into its genuine computerized life.</p>
+
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Habibur Rahman Habib 2021,a programmer initiative.</p>
+    </footer>
 
 </body>
 
